[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoposst"
version = "0.1.0"
description = "Автономная AI Content Entity"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "PySide6>=6.6.0",
    "google-generativeai>=0.3.0",
    "sqlalchemy>=2.0.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "aiohttp>=3.9.0",
    "playwright>=1.40.0",
    "python-telegram-bot>=20.7",
    "vk-api>=11.9.9",
    "cryptography>=41.0.0",
    "keyring>=24.3.0",
    "schedule>=1.2.0",
]

[project.scripts]
autoposst = "main:main"

[tool.setuptools]
packages = ["core", "agents", "memory", "ai", "platforms", "ui", "security", "config", "utils"]

